// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ActionMenu should display items and allow click after toggle is clicked: click 1`] = `
[
  [
    {
      "foo": "bar",
    },
  ],
]
`;

exports[`ActionMenu should display items and allow click after toggle is clicked: expanded 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="t([
  "action-menu.aria-label"
])"
    class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
    data-ouia-component-id="action_menu_toggle"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
          />
        </svg>
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ActionMenu should display tooltip: hover 1`] = `
<body>
  <div>
    <button
      aria-expanded="true"
      aria-label="t([
  "action-menu.aria-label"
])"
      class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
      data-ouia-component-id="action_menu_toggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
  <div
    class="pf-v6-c-menu"
    data-ouia-component-id="OUIA-Generated-Dropdown-_r_8_"
    data-ouia-component-type="PF6/Dropdown"
    data-ouia-safe="true"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; right: auto; bottom: auto; transform: translate(0px, 0px);"
  >
    <div
      class="pf-v6-c-menu__content"
    >
      <ul
        class="pf-v6-c-menu__list"
        role="menu"
      >
        <li
          class="pf-v6-c-menu__list-item"
          data-ouia-component-id="OUIA-Generated-DropdownItem-_r_e_"
          data-ouia-component-type="PF6/DropdownItem"
          data-ouia-safe="true"
          role="none"
        >
          <button
            aria-describedby="pf-tooltip-_r_g_"
            class="pf-v6-c-menu__item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span
              class="pf-v6-c-menu__item-main"
            >
              <span
                class="pf-v6-c-menu__item-text"
              >
                Lorem ipsum
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    aria-live="polite"
    class="pf-v6-c-tooltip pf-m-top"
    data-popper-escaped="true"
    data-popper-placement="top"
    data-popper-reference-hidden="true"
    id="pf-tooltip-_r_g_"
    role="tooltip"
    style="position: absolute; left: 0px; top: auto; z-index: 9999; opacity: 0; transition: opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: revert; right: auto; bottom: 0px; transform: translate(0px, -15px);"
  >
    <div
      class="pf-v6-c-tooltip__arrow"
    />
    <div
      class="pf-v6-c-tooltip__content"
    >
      dolor sit
    </div>
  </div>
</body>
`;

exports[`ActionMenu should render a basic component: basic 1`] = `
<Dropdown
  isOpen={false}
  onOpenChange={[Function]}
  onSelect={[Function]}
  shouldFocusToggleOnSelect={true}
  toggle={[Function]}
>
  <DropdownList>
    <DropdownItem
      onClick={[Function]}
      value="Lorem ipsum"
    >
      Lorem ipsum
    </DropdownItem>
  </DropdownList>
</Dropdown>
`;
